Search Bar pop up added

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>TimePiece Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="modal.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
             <label id="addLabel" for="add">ADD A WATCH</label>
-            <button id="add" name="add" onclick="radiob()"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <button id="add" name="add"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M13.2 10.8H24V13.2H13.2V24H10.8V13.2H0V10.8H10.8V0H13.2V10.8Z" fill="white"/>
                 </svg>
             </button>
@@ -22,6 +23,7 @@
         </div>
 
         <div class="content">
+            <iframe class="modal" id="myModal" src="search.html"></iframe>
             <div id="navbar">
 
                 <div id="searchbar">
@@ -30,6 +32,8 @@
                         </svg>                        
                     <input id="search" type="text" placeholder="Search...">
                 </div>
+                
+                
 
                 <div id="category">
                     <p id="allOption">All</p>
