Added Api support

--- a/search.html
+++ b/search.html
@@ -12,7 +12,17 @@
     <!-- Modal content -->
     <div class="modal-content">
         <span id="closeBtn" class="close">&times;</span>
-        <p>Some text in the Modal..</p>
+        <div id="findWatch">
+            <input id="find" type="search" placeholder="Enter Watch Name, Model, Brand, or Reference Number...">
+            <button id="findBtn">Search</button>
+        </div>
+
+            <div class="results"></div>
+                <!-- <div class="item">
+                    <img src="https://img.chrono24.com/images/uhren/35848668-9pebdmkv6ungv0ehxv0d3apo-ExtraLarge.jpg">
+                    <p>Audemars Piguet Royal Oak Tourbillon Extra-Thin 26510ST.OO.1220ST.01</p>
+                </div> -->
+        </div>
     </div>
     
 </body>
