Can Add Watch to Library

--- a/index.html
+++ b/index.html
@@ -62,14 +62,13 @@
                 </div>
 
             </div>
-            <div class="watchList">
-                <div class="watchItem">
+            <div id="watchList">
+                <!-- <div class="watchItem">
                     <img src="images\97-976396_rolex-free-png-image-rolex-submariner-black-silver.png" alt="WatchPhoto">
                     <h3>Rolex Submariner Date</h3>
                     <p>Approx.</p>
-                    <p>Black Ceramic Bezel Dial Stainless Steel</p>
                     <h1>$12,995</h1>
-                </div>
+                </div> -->
             </div>
         </div>
 
