SaveData and LoadData added + remove feature

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>TimePiece Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="modal.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
+            <h3 id="total">Portfolio Value: <a id="totalNum">$0</a> </h3>
             <label id="addLabel" for="add">ADD A WATCH</label>
             <button id="add" name="add"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M13.2 10.8H24V13.2H13.2V24H10.8V13.2H0V10.8H10.8V0H13.2V10.8Z" fill="white"/>
@@ -68,6 +68,7 @@
                     <h3>Rolex Submariner Date</h3>
                     <p>Approx.</p>
                     <h1>$12,995</h1>
+                    <span>&times;</span>
                 </div> -->
             </div>
         </div>
